# ccprompts

./: .README.md.swp  .editorconfig  .eslintrc.js  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  CC-SDK-Guide.md  CHANGELOG.md  CI-CD-IMPLEMENTATION-SUMMARY.md  CICD-VERIFICATION-GUIDE.md  CICD_IMPLEMENTATION.md  CLAUDE.md  CODE_REVIEW_FIXES.md  CODE_REVIEW_FIXES_v2.md  COMMAND_REFERENCE.md  COMMAND_TEMPLATE.md  CONTRIBUTING.md  DUPLICATION_ANALYSIS_REPORT.md  EXAMPLES.md  EXAMPLES.md.backup  LICENSE  MODERN_AGENTIC_CAPABILITIES.md  PLANNING.md  PLUGIN.md  PLUGIN_INSTALLATION.md  PR_DESCRIPTION.md  PR_DESCRIPTION_UPDATED.md  README.md  REVIEW_REQUEST_INSTRUCTIONS.md  SAFETY.md  SECURITY_ENHANCEMENTS.md  TASKS.md  TESTING-STRATEGY.md  TEST_STRATEGY.md  advanced_optimization_framework.py  agents  anthropic_prompt_optimizer.py  commands  (+7 more)
.claude/: .mcp.json  CLAUDE_CODE_ALIGNED_REORGANIZATION.md  CommandRegistry.js  README.md  REORGANIZATION_PROPOSAL.md  command-registry.json  commands.json  config.json  mcp.json  project.json  settings.json  test-mcp.js  test-registry.js
.claude-plugin/: marketplace.json  plugin.json
.claude/__tests__/: CommandRegistry.test.js  ConfigManager.test.js  test-mcp.test.js
.claude/agents/: agent-template-wizard.md  bash-shell-scripting.md  concise-agent-architect.md  documentation_writer.md  fastapi-optimizer.md  javascript-expert.md  rust-expert.md  verbose-agent-architect.md
.claude/commands/: 1_explore_plan_code.md  2_continue_explore_plan_code.md  3_sync_plan_tasks.md  analyze-project.md  audit-security.md  best-practices.md  bootstrap-project.md  code-review.md  comply.md  daily-standup.md  debug-session.md  deploy.md  document.md  export-config.md  git.md  harden.md  health-check.md  incident-response.md  knowledge-base.md  learn.md  list-prompts.md  mcp.md  modernize.md  new-feature.md  optimize.md  pre-commit.md  prompt-stats.md  quick-fix.md  refactor.md  release-notes.md  release.md  search-prompts.md  setup-ci.md  smart-suggest.md  sprint-planning.md  tech-debt.md  test.md  transform.md  troubleshoot.md  validate-environment.md  (+1 more)
.claude/config/: ConfigManager.js  schema.json
.claude/deprecated/: concise-agent-architect.md
.claude/workflows/: code-quality-enhancement.yaml  development-cycle.yaml  full-development-cycle.yaml  new-project-setup.yaml  security-audit-comprehensive.yaml  security-hardening.yaml
.devcontainer/: CLAUDE.md  Dockerfile  README.md  dagger.json  dagger.py  devcontainer.json  docker-compose.yml
.devcontainer/init-scripts/: 02-create-extensions.sql  03-create-schemas.sql  04-create-functions.sql  05-sample-data.sql
.devcontainer/monitoring/: alertmanager.yml  prometheus-dev.yml
.devcontainer/scripts/: mcp-init.sh  on-create.sh  post-create.sh  post-start.sh  setup-fish.sh  update-content.sh
.github/: BRANCH_PROTECTION.md  CODEOWNERS  SETUP_INSTRUCTIONS.md  markdown-link-check.json  pull_request_template.md  workflow-config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  command_improvement.md  command_proposal.yml  feature_request.md  feature_request.yml
.github/scripts/: generate_ascii_report.py
agents/: agent-template-wizard.md  fastapi-optimizer.md  golang-pro.md  javascript-expert.md  performance-optimizer.md  python-pro.md  systems-architect.md
beta-prompts/: .claude_hooks.json  .pre-commit-config.yaml  01_baseline_collector.py  03_enhanced_collector.py  08_run_experiment.py  10_show_optimization_results.py  ANTHROPIC_PROMPT_OPTIMIZATION_GUIDE.md  CLAUDE.md  DEVELOPMENT.md  ECOSYSTEM_README.md  ENHANCED_SYSTEM_SUMMARY.md  Makefile  PROMPT_GENERATION_IMPACT.md  README.md  SAFETY.md  __init__.py  adaptive_optimization_engine.py  comprehensive_testing_framework.py  contextual_memory_system.py  dagger.json  ecosystem_integration_example.py  generation_system.py  improvement_engine.py  intelligent_error_recovery.py  intelligent_prompt_orchestrator.py  interactive_dashboard.py  mcp_integration_engine.py  optimization_suite.py  prompt_enhancement_strategies.py  pyproject.toml  quality_validation_system.py  real_baseline_collector.py  real_comparison_analysis.py  real_enhanced_collector.py  requirements.txt  run_generation.py  run_improvement.py  run_optimization.py  run_templating.py  seaborn_analytics.py  (+2 more)
beta-prompts/beta_prompts/: __init__.py  generation_system.py  interactive_dashboard.py  optimization_suite.py  scorer.py  seaborn_analytics.py  templating_framework.py  visualizations.py
beta-prompts/dagger-src/: go.mod  main.go
beta-prompts/scripts/: lint.sh  quick-safe.sh  safe-run.sh
beta-prompts/template_registry/: registry.json
docs/: API-REFERENCE.md  CC-SDK.md  CI-CD-ROLLBACK-PLAN.md  COMMAND-REFERENCE.md  DEVELOPER-GUIDE.md  README.md  USAGE-EXAMPLES.md  WORKFLOW-GUIDE.md
examples/: 01-getting-started.md  02-development-workflow.md  03-security-compliance.md  04-performance-optimization.md  05-learning-development.md  06-team-coordination.md  07-advanced-integration.md  08-troubleshooting.md  09-command-chaining.md  10-success-metrics.md  11-best-practices.md  README.md
lib/: fsUtils.js  gitUtils.js  pathUtils.js
playbooks/: code-quality-enhancement.yaml  security-audit-comprehensive.yaml
prompts/: INDEX.md  README.md
reports/: ci-cd-expert.json  security-review-specialist.json  test-generator-agent.json
scripts/: quick-safe.sh  safe-run.sh  safety-validator.js  split-examples.js  test-plugin-local.sh  validate-commands.js  validate-plugin.js  validate-prompts-modular.js  validate-prompts.js  validation-config.json
src/: index.ts  package.json
templates/: SUBAGENT_TEMPLATE.md  SUB_AGENT_TEMPLATE.md
tests/: command-structure.test.js  file-utils.test.js  integration.test.js  jest-env-setup.js  jest-teardown.js  main-validator.test.js  modular-validators.test.js  path-utils-enhanced.test.js  performance-compatibility.test.js  quality-scorer.test.js  regex-state.test.js  safety-validation.test.js  security-validator.test.js  setup.js  structure-validator.test.js  validate-plugin.test.js  validation.test.js
(+214 files in other folders)
